@@ -242,6 +242,7 @@ For more FileStorage info, you can check
 
     ::cv::findContours matrix mode method ?offset_point_x offset_point_y?
     ::cv::drawContours matrix contours_list contourIdx color_list ?thickness lineType maxLevel offset_point_x offset_point_y?
+    ::cv::arcLength contour closed
     ::cv::contourArea contour ?oriented?
     ::cv::boundingRect contour
     ::cv::minAreaRect contour
