@@ -187,6 +187,7 @@ MODULE_SCOPE int HoughLinesP(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *co
 
 MODULE_SCOPE int findContours(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
 MODULE_SCOPE int drawContours(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
+MODULE_SCOPE int arcLength(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
 MODULE_SCOPE int contourArea(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
 MODULE_SCOPE int boundingRect(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
 MODULE_SCOPE int minAreaRect(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
